# cmake_practice

./: README
t1/: CMakeLists.txt~  main.cpp~
t2/: CMakeLists.txt  CMakeLists.txt~  README  README~
t2/src/: CMakeLists.txt  CMakeLists.txt~  main.cpp
t3/: CMakeLists.txt~  README
t3/src/: CMakeLists.txt  hello.cpp~  hello.h  hello.h~
t4/: CMakeLists.txt  README  README~
t4/src/: CMakeLists.txt  hello.cpp~  main.cpp  main.cpp~
